--- a/lecture1/visuals/lecture1.ipynb
+++ b/lecture1/visuals/lecture1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -18,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import qeds\n",
@@ -28,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors=plt.rcParams[\"axes.prop_cycle\"].by_key()[\"color\"]"
@@ -37,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_legend = pd.read_excel('./mpd2018.xlsx',sheet_name='Legend')\n",
@@ -80,6 +88,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -90,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "country_list = ['GBR','USA','JPN','CHN','IND']\n",
@@ -214,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.set_style('whitegrid')"
@@ -223,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors.remove('#fec630')"
@@ -232,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_graphs(df2,country_list,filename,source,locs,loc_all):\n",
@@ -259,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "year_x = 2020\n",
@@ -313,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "year_x = 2016\n",
@@ -346,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "year_x = 1855\n",
@@ -383,6 +406,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -507,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GBR = df2[df2.countrycode=='GBR'].set_index('year').cgdppc.dropna()"
@@ -516,7 +542,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cycle, trend = sm.tsa.filters.hpfilter(GBR.loc[1900:],1600)"
@@ -628,7 +656,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# sns.set(style=\"white\", rc={\"axes.facecolor\": (0, 0, 0, 0)})\n",
@@ -669,6 +699,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -738,7 +769,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Inflation Rate'].plot(kind='line')"
@@ -805,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_legend = {'CPILFESL':'Consumer Price Index for All Urban Consumers: All Items Less Food and Energy in U.S. City Average',\n",
@@ -820,7 +855,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start = datetime.datetime(1960, 1, 1)\n",
@@ -833,7 +870,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Decade'] = df.index.year - df.index.year % 10\n",
@@ -844,14 +883,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_A['Inflation Rate']=df_A['CPIAUCSL'].pct_change()"
@@ -860,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_A.rename(columns={'UNRATE':'Unemployment Rate'},inplace=True)"
@@ -869,7 +914,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors_dict = dict(zip(df_A.Decade.unique(),colors))"
@@ -878,7 +925,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decades = df_A.Decade.unique()"
@@ -908,6 +957,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1034,6 +1084,7 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1046,6 +1097,7 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1088,7 +1140,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "real_wage = pd.read_csv('./real-wage.csv')"
@@ -1097,7 +1151,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "select = ((real_wage.Series =='In 2018 constant prices at 2018 USD PPPs' ))"
@@ -1106,7 +1162,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "real_wage = real_wage[select][['Country','Time','Value']].reset_index(drop=True)"
@@ -1115,7 +1173,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def normalize(group):\n",
@@ -1128,7 +1188,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wage_index = real_wage.groupby('Country').apply(normalize).reset_index().drop('level_1',axis=1)"
@@ -1137,7 +1199,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "countries = wage_index.Country.unique()\n",
@@ -1150,7 +1214,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "country_select = ['Greece','United Kingdom','United States','France','Germany','Poland']\n",
@@ -1222,7 +1288,9 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gov = pd.read_csv('./gov.csv')"
@@ -2381,7 +2449,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "countries = gov.Country.unique()\n",
@@ -2394,7 +2464,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "country_select = ['Greece','United Kingdom','United States','France','Germany','Poland','India']\n",
@@ -2425,7 +2497,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = gov[(gov.Year>=2007) & (gov.IND=='GTE_GDP')][['COU','Country','Year','Value']]"
@@ -2434,7 +2508,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.rename(columns={'Value':'Expenditures'},inplace=True)"
@@ -2443,7 +2519,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data2 = gov[(gov.Year>=2007) & (gov.IND=='GTR_GDP')][['COU','Country','Year','Value']]"
@@ -2452,7 +2530,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data2.rename(columns={'Value':'Revenues'},inplace=True)"
@@ -2461,7 +2541,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = data.merge(data2,on=['COU','Country','Year'])"
@@ -2470,7 +2552,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.sort_values(['Country','Year'],inplace=True)"
@@ -2571,7 +2655,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_excel('OECD-PMR-Economy -Wide Indicator values-2018.xlsx',sheet_name='PMR_Total_Eco')\n",
@@ -2593,7 +2679,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df2 = pd.read_excel('OECD_Indicators_PMR.xlsx',sheet_name='PMR',skiprows=3)\n",
@@ -2606,7 +2694,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "countries = df2.Country.values\n",
@@ -2621,7 +2711,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.append(df2,sort=True)\n",
@@ -2633,7 +2725,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.dropna(subset=['PMR'],inplace=True)"
@@ -2642,7 +2736,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.Year = df.Year.astype(int)\n",
@@ -2652,7 +2748,9 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "countries = df.Country.unique()\n",
@@ -2665,7 +2763,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "country_select = ['Greece','United Kingdom','United States','France','Germany','Poland','India']\n",
@@ -2722,7 +2822,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prod = pd.read_csv('gdp_per_hour_OECD.csv')"
@@ -2731,7 +2833,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prod_UK = prod[prod.LOCATION == 'GBR']"
@@ -2740,7 +2844,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p = np.poly1d(np.polyfit(prod_UK.loc[:1257].TIME,prod_UK.loc[:1257].Value,1))"
@@ -2805,7 +2911,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -2826,7 +2934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
