--- a/lecture2/lecture2.Rmd
+++ b/lecture2/lecture2.Rmd
@@ -24,9 +24,85 @@ opts_chunk$set(
   )
 ```
 
-## Employment Rents
+
+
+## Firm decisions
+.pull-left[
+
+- What to produce
+
+- How to produce
+
+- Advertising budget
+
+- R&D budget
+
+- **How to set wages** 
+
+- **How much to produce**
+
+- **At what price to sell**
+
+- ...
+]
+
+.pull-right[
+<center>
+<img src="./lecture2_files/figure-html/new_yorker.jpg" width="120%"/>
+</center>
+Source: New Yorker
+
+]
+---
+### Wage setting decision
+
+<br>
+
+<br>
+
+"Labor discipline model" is a theory that characterizes the wage setting process. 
+
+---
+
+class: inverse, center, middle
+name: labor_discipline
+
+# Labor Discipline Model
+
+<html><div style='float:left'></div><hr color='#EB811B' size=1px width=796px></html>
+
+
+---
+### Labor discipline model
+
+- Workers have employment rents
+
+ - loosing a job is costly
+ 
+- Workers exert more effort if the cost of loosing a job is higher
+
+ - The higher the wage, the costlier to lose a job
+ 
+ - Exerting more effort is not desirable (disutility of work)
+ 
+- Workers optimally decide on how much effort to put on
+
+- Firms have a trade-off:
+
+ - Higher wages induce more effort from workers leading to more production, increasing profitability
+ 
+ - Wage bill is a substantial portion of production costs, reducing profitability
+ 
+- Firms optimally choose a wage rate to maximize profits 
+
+---
+### Employment Rents
+
 
 .pull-left[
+[Read section 6.5 Determinants of the employment rent](https://core-econ.org/the-economy/book/text/06.html#65-determinants-of-the-employment-rent)
+
+
 - Cost of loosing a job
 
  - The difference between value of job and the next best option
@@ -50,35 +126,28 @@ opts_chunk$set(
 <img src="./lecture2_files/figure-html/Slide4.JPG" width="100%"/>
 </center>
 
-Employment rent = $(12-2-6) \times 35 \times 44 = 6160$ 
+Employment rent = $(12-6-2)\times 35 \times 44 = 6160$ 
 
 ]
----
 
-class: inverse, center, middle
-name: labor_discipline
-
-# Labor Discipline Model
-
-<html><div style='float:left'></div><hr color='#EB811B' size=1px width=796px></html>
 
 ---
 
-## Worker's best response
+### Worker's best response
 
 .pull-left[
 - For a given wage offered, the optimal effort exerted by the workers
 
 - Say wage rate = $12
- - Why would'nt a worker exert more effort than .5?
- - Why would'nt a worker exert less effort than .5?
+ - Why wouldn't a worker exert more effort than .5?
+ - Why wouldn't a worker exert less effort than .5?
  
 - Feasible set: 
 
  - Wage and effort pairs that a firm can get from its employees
 
 - Slope of the best response curve = MRT
- - MRT stands for marginal rate of transformation
+ - MRT stands for marginal rate of transformation of wages into effort
 ]
 .pull-right[
 <center>
@@ -88,7 +157,7 @@ name: labor_discipline
 
 ---
 
-## Shape of worker's best response
+### Shape of worker's best response
 
 .pull-left[
 - Effort at the reservation wage is 0
@@ -122,9 +191,9 @@ Questions:
 
 - A firm's goal is to maximize profits
 
- - Maximize production
+ - by maximizing production
  
- - Minimize cost
+ - by minimizing cost of production (wage bill included)
  
 - To maximize production, offer higher wages
 
@@ -140,7 +209,7 @@ Questions:
 
 #### How to deal with the wage effort trade-off?
 
-- Minimize cost of effort (effort/wage)
+- Minimize cost of effort (wage/effort)
 
 - Cost of effort is the same at all points on an isocost line
 
@@ -151,7 +220,7 @@ Questions:
 <br>
 
 <center>
-<img src="./lecture2_files/figure-html/figure-06-05-b.JPG" width="140%"/>
+<img src="./lecture2_files/figure-html/figure-06-05-b.jpg" width="140%"/>
 </center>
 ]
 
@@ -162,7 +231,7 @@ Questions:
 
 #### How to deal with the wage effort trade-off?
 
-- Minimize cost of effort (effort/wage)
+- Minimize cost of effort (wage/effort)
 
 - Cost of effort is the same at all points on an isocost line
 
@@ -175,7 +244,7 @@ Questions:
 <br>
 
 <center>
-<img src="./lecture2_files/figure-html/figure-06-05-c.JPG" width="140%"/>
+<img src="./lecture2_files/figure-html/figure-06-05-c.jpg" width="140%"/>
 </center>
 ]
 
@@ -186,7 +255,7 @@ Questions:
 
 #### How to deal with the wage effort trade-off?
 
-- Minimize cost of effort (effort/wage)
+- Minimize cost of effort (wage/effort)
 
 - Cost of effort is the same at all points on an isocost line
 
@@ -194,7 +263,7 @@ Questions:
 
 - Slope of isocost curve is MRS
 
- - MRS: marginal rate of substitution 
+ - MRS: marginal rate of substitution between effort and wage
  
 
 ]
@@ -203,19 +272,21 @@ Questions:
 <br>
 
 <center>
-<img src="./lecture2_files/figure-html/figure-06-05-e.JPG" width="140%"/>
+<img src="./lecture2_files/figure-html/figure-06-05-e.jpg" width="140%"/>
 </center>
 ]
 
 ---
-## Determination of wages
+### Determination of wages
 
 .pull-left[
-- Profits are maximized at the steepest isocost line at the minimum feasible cost
+- Profits are maximized at the steepest isocost line (the minimum feasible cost)
  
  - Equilibrium wage and effort is point A, where MRS = MRT
 
 - Efficiency wage: a wage rate greater than the reservation wage rate
+
+ - What matters for profits is $e/w$, the efficiency per dollar of wage costs.
 ]
 .pull-right[
 <center>
@@ -224,17 +295,76 @@ Questions:
 ]
 
 ---
+### Involuntary unemployment
+
+<br>
+
+> "The state of being out of work, but preferring to have a job at the wages and working conditions that otherwise identical employed workers have."
+> &ndash; Core the Economy
+
+<br>
+
+- In this model, there must be involuntary unemployment
+
+- Suppose there is no involuntary unemployment
+
+- Workers will not exert any effort
+
+- Employers will not make any payment to workers who don't work
+
+
+
+---
 
 .pull-left[
-#### Trend
+### Position of workers' best response curve
+
+The position of the best response curve depends on 
+
+- the utility from consumption enabled by the wage income
+
+- disutility of effort
+
+- the probability of being caught while slacking
+
+- the duration of potential unemployment
+
+- the reservation wage
+
+ - depends on the level of unemployment
+ 
+- Higher unemployment rate
+ - lower unemployment benefits
+ 
+ - higher duration of unemployment benefits
+
 ]
+
+--
 .pull-right[
+
 <br>
+
+<br>
+
 <br>
 <center>
 <img src="./lecture2_files/figure-html/Slide8.JPG" width="100%"/>
 </center>
 ]
+
+---
+### Relevance of the previous section
+
+<br>
+
+<br>
+
+- Previous section was a firm level analysis.
+
+- We assumed unemployment rate is given in our analyis.
+
+- In the coming weeks, we will analyze the determination of unemployment rate in the economy relying on what we have learned.
 
 
 ---
@@ -246,58 +376,31 @@ name: price_setting
 
 <html><div style='float:left'></div><hr color='#EB811B' size=1px width=796px></html>
 
+
 ---
+### Pricing and production decisions
 
-## Firm decisions
-.pull-left[
+- Relevant for firms selling differentiated products or firms with market power
 
-- What to produce
+> "An attribute of a firm that can sell its product at a range of feasible prices, so that it can benefit by acting as a price-setter (rather than a price-taker)." &ndash; Core the Economy
 
-- How to produce
 
-- Wages 
-
-- Advertising budget
-
-- R&D budget
-
-- _How much to produce_
-
-- _At what price to sell_
-
-- ...
-]
-
-.pull-right[
-<center>
-<img src="./lecture2_files/figure-html/new_yorker.jpg" width="120%"/>
-</center>
-Source: New Yorker
-
-]
----
-## Pricing and production decisions
-
-- Relevant for firms selling differentiated products or firms with market power?
-
- - More on this later
- 
  
 - Depends on
 
- - Cost structure
+ - firm cost structure
 
  - Market demand
  
-- Analyze pricing and production decisions
+- Analyze pricing and production decisions in 4 steps
 
  1. Represent cost structure as cost function
  
- 2. Using cost function, draw isocost curves
+ 2. Using the cost function, draw isoprofit curves
  
- 3. Repersent market demands as demand function
+ 3. Repersent market demand as a demand function
  
- 4. Using isocost curves and market demand, find the profit maximizing price and output combination
+ 4. Using the isoprofit curves and the market demand, find the profit maximizing price and output combination
 
 ---
 ## Cost Structure
@@ -323,7 +426,7 @@ Source: New Yorker
  - If inputs increase by a given proportion, output increases less than proportionally
 
 ---
-## Economies of scale
+### Economies of scale
 
 
 .pull-left[
@@ -338,13 +441,13 @@ Potential causes
 - Network effects
 
 
-## Diseconomies of scale
+### Diseconomies of scale
 
 Potential causes
 
 - Additional layer of bureaucracy
 
-- Harder to minotor employees
+- Harder to monitor employees
 
 - Necessity of other departments
 
@@ -453,7 +556,7 @@ Source: New Yorker
 ]
 
 ---
-## Marginal cost of production
+### Marginal cost of production
 
 .pull-left[
 - Derivative of the total cost function, $MC\equiv\frac{dC(Q)}{dQ}=C'(Q)$
@@ -473,48 +576,76 @@ Source: New Yorker
 
 .pull-right[
 <center>
-<img src="./lecture2_files/figure-html/Slide8_7.jpg" width="100%"/>
+<img src="./lecture2_files/figure-html/Slide8_7.JPG" width="100%"/>
 </center>
 ]
 ---
-## Isocost curves
+### Isoprofit curves
 .pull-left[
 - Profit = Revenue - Cost 
 
 $$
 \pi = PQ-C(Q)=Q(P-AC)
 $$
-- An isocost curve represents all the price and quantity compbinations which lead to same level of profit
+- An isoprofit curve represents all the price and quantity combinations which lead to same level of profit
 
-- MC curve intersect with each isocost curve at its lowest point
+- MC curve intersect with each isoprofit curve at its lowest point
 
-- Average cost curve represents the 0 profit isocost curve
+- Average cost curve represents the 0 profit isoprofit curve
 
 ]
 .pull-right[
 <center>
-<img src="./lecture2_files/figure-html/Slide25.JPG" width="120%"/>
+<img src="./lecture2_files/figure-html/Slide25.JPG" width="100%"/>
 </center>
 ]
 
-
 ---
-## Production
+### Market demand
 
 .pull-left[
-- Production takes place at the 
+- Represents the number of items consumers are willing to purchase at a given price.
+
+ - Income of consumers
+ 
+ - Price of other goods 
+ 
+ - Utility consumers get from the consumption of the good
+
+- Notice the upside down nature of the graph
+
+ - The correct reading of this graph is that for a given price level, what the corresponding quantity demanded is.
+]
+
+.pull-right[
+<center>
+<img src="./lecture2_files/figure-html/Slide24.JPG" width="100%"/>
+</center>
+
+]
+---
+### Production
+
+.pull-left[
 
 - Demand curve = Firm’s feasible frontier 
+ 
+ - Slope = MRT
+ 
+ - MRT: Marginal rate of transformation of lower prices into greater quantity sold
   
-  (slope = MRT)
 
 - Isoprofit curves = Firm’s indifference curves
 
- (slope = MRS)
+ - Slope = MRS
+ 
+ - MRS: Marginal rate of substitution in profit creation between selling more and chargin more
 
 - Firm maximizes profits by choosing point where
 
    MRS = MRT 
+
+ - Production takes place at point E
 
 ]
 .pull-right[
@@ -525,7 +656,7 @@ $$
 
 
 ---
-## Profit Maximization
+### Profit Maximization
 
 .pull-left[
 
@@ -543,7 +674,7 @@ $$
 ]
 
 ---
-## Welfare analysis
+### Welfare analysis
 
 .pull-left[
 - Consumer surplus $(CS)$: total difference between willingness to pay and actual price
@@ -561,7 +692,7 @@ $$
 ]
 
 ---
-## Price elasticity of demand
+### Price elasticity of demand
 
 .pull-left[
 
