--- a/lecture2/lecture2.Rmd
+++ b/lecture2/lecture2.Rmd
@@ -100,9 +100,9 @@ name: labor_discipline
 
 <br>
 
-- A sequential game between an employer and a employee:
+- A sequential game between an employer and an employee:
 
-1. The employer chooses a wage
+1. Employer chooses a wage rate
 
 2. Employee chooses a level of work effort after observing the wage
 
@@ -137,10 +137,12 @@ Notice that
  - stigma of unemployment,
  - other available employment opportunities  
 
-- Reservation wage = value of next best option
+- Reservation wage = value of the next best option
 
 - Employment rent = wage - reservation wage - distutility of effort
 ]
+
+--
 
 .pull-right[
 
@@ -415,7 +417,7 @@ name: price_setting
 
 - Relevant for firms selling differentiated products or firms with market power
 
-> Market power: "An attribute of a firm that can sell its product at a range of feasible prices, so that it can benefit by acting as a price-setter (rather than a price-taker)." &ndash; Core the Economy
+> **Market power:** "An attribute of a firm that can sell its product at a range of feasible prices, so that it can benefit by acting as a price-setter (rather than a price-taker)." &ndash; Core the Economy
 
 
  
@@ -427,11 +429,11 @@ name: price_setting
  
 - Analyze pricing and production decisions in 4 steps
 
- 1. Represent cost structure as cost function
+ 1. Represent the cost structure of the firm as a cost function
  
  2. Using the cost function, draw isoprofit curves
  
- 3. Repersent market demand as a demand function
+ 3. Repersent the market demand as a demand function
  
  4. Using the isoprofit curves and the market demand, find the profit maximizing price and output combination
 
@@ -480,7 +482,7 @@ Potential causes:
 
 - Additional layers of bureaucracy
 
-- Increasing cost of monitor employees
+- Increasing cost of monitoring employees
 
 - Necessity of establishing other departments
 
@@ -674,7 +676,7 @@ $$
 
  - Slope = MRS
  
- - MRS: Marginal rate of substitution in profit creation between selling more and chargin more
+ - MRS: Marginal rate of substitution in profit creation between selling more and charging more
 
 - Firm maximizes profits by choosing point where
 
